Fixed a bug concerning chunk blockdata parsing
Made 2 typos which resulted in slices of the chunk dissapearing and shifting over in increments of 32. Spent too long debugging this.

--- a/src/Render/Page/style.css
+++ b/src/Render/Page/style.css
@@ -1,29 +1,66 @@
 *,
 *::after,
 *::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  outline: none;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	outline: none;
 }
 
 body {
-  overflow: hidden;
-  background-color: #383B50;
-  cursor: grab;
+	overflow: hidden;
+	background-color: #383B50;
+	cursor: grab;
 }
 
 #fileInput {
     position: absolute;
     top: 10px;
-    left: 10px;
+    left: 0.5%;
+	width: 15%;
+    z-index: 10;
+    background: white;
+    padding: 5px;
+}
+#x {
+    position: absolute;
+    top: 5%;
+    left: 0.5%;
+	width: 4%;
+    z-index: 10;
+    background: white;
+    padding: 5px;
+}
+#y {
+    position: absolute;
+    top: 5%;
+    left: 6%;
+	width: 4%;
+    z-index: 10;
+    background: white;
+    padding: 5px;
+}
+#z {
+    position: absolute;
+    top: 5%;
+    left: 11.5%;
+	width: 4%;
+    z-index: 10;
+    background: white;
+    padding: 5px;
+}
+#goto {
+    position: absolute;
+    top: 10%;
+    left: 0.5%;
+	width: 5%;
     z-index: 10;
     background: white;
     padding: 5px;
 }
 
 .webgl {
-  position: fixed;
-  top: 0;
-  left: 0;
+	position: fixed;
+	top: 0;
+	left: 0;
 }
